// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components ItemDisplay can render with invalid data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="padding: 10px;"
      >
        <div>
           
           
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="padding: 10px;"
    >
      <div>
         
         
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Components ItemDisplay renders with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="padding: 10px;"
      >
        <div>
           
          some product name
           
        </div>
        <div
          data-testid="variant-show"
          style="padding: 10px; min-width: 360px; margin-bottom: 40px; margin-top: 20px; border: 1px solid pink; border-radius: 10px;"
        >
          <div>
             
            BALOO
             
          </div>
          <div>
            In Stock: 
            false
          </div>
          <img
            src="https://www.aesop.com/au/url/moorl/kaloo.jpg"
            style="width: 240px; height: 240px;"
          />
          <div>
            80$
          </div>
        </div>
        <div
          data-testid="variant-show"
          style="padding: 10px; min-width: 360px; margin-bottom: 40px; margin-top: 20px; border: 1px solid pink; border-radius: 10px;"
        >
          <div>
             
            PALOO
             
          </div>
          <div>
            In Stock: 
            true
          </div>
          <img
            src="https://www.aesop.com/au/url/moorl/Paloo.jpg"
            style="width: 240px; height: 240px;"
          />
          <div>
            90$
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="padding: 10px;"
    >
      <div>
         
        some product name
         
      </div>
      <div
        data-testid="variant-show"
        style="padding: 10px; min-width: 360px; margin-bottom: 40px; margin-top: 20px; border: 1px solid pink; border-radius: 10px;"
      >
        <div>
           
          BALOO
           
        </div>
        <div>
          In Stock: 
          false
        </div>
        <img
          src="https://www.aesop.com/au/url/moorl/kaloo.jpg"
          style="width: 240px; height: 240px;"
        />
        <div>
          80$
        </div>
      </div>
      <div
        data-testid="variant-show"
        style="padding: 10px; min-width: 360px; margin-bottom: 40px; margin-top: 20px; border: 1px solid pink; border-radius: 10px;"
      >
        <div>
           
          PALOO
           
        </div>
        <div>
          In Stock: 
          true
        </div>
        <img
          src="https://www.aesop.com/au/url/moorl/Paloo.jpg"
          style="width: 240px; height: 240px;"
        />
        <div>
          90$
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
